# manim-agent

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_PROMPT.md  Dockerfile  README.md  api_server.py  docker-compose.yml  example_usage.py  generated_explain_the_taylor_series_with.py  generated_show_how_derivatives_work.py  generated_visualize_the_pythagorean_theo.py  pyproject.toml  render.yaml  requirements.txt  start_production.sh
frontend/: .env.production  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx
frontend/app/api/generate/: route.ts
frontend/app/api/history/: route.ts
frontend/app/api/status/[sessionId]/: route.ts
frontend/app/api/test/: route.ts
frontend/app/api/video/[sessionId]/: route.ts
frontend/components/: ActivityLog.tsx  ChatInput.tsx  ChatInputWithOptions.tsx  ChatInterface.tsx  Message.tsx  MessageWithActivity.tsx  VideoPlayer.tsx
frontend/types/: websocket.ts
manim_agent/: __init__.py
manim_agent/agents/: __init__.py  advanced_content_agent.py  content_agent.py  manim_code_agent.py  prompt_templates.py  visual_design_agent.py
manim_agent/config/: meta_prompt_framework.py  quality_standards.py
manim_agent/core/: advanced_orchestrator.py  base_agent.py  llm_service.py  orchestrator.py  streaming_wrapper.py  token_optimizer.py
